[package]
name = "solana-nft-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.11"
arrayref = "0.3.6"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"

[dev-dependencies]
solana-sdk = "1.7.11"

[lib]
name = "nft"
crate-type = ["cdylib", "lib"]